[package]
name = "blog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19.3"
yewdux = "0.8.1"
yew-router = "0.16"
wasm-bindgen = "0.2.82"
wasm-logger = "0.2.0"
wasm-bindgen-futures = "0.4.32"
serde = "1.0.143"
web-sys = "0.3.59"
serde_json = "1.0.83"
gloo-net = "0.2.4"
gloo-storage = "0.2.1"
gloo-console = "0.2.1"
gloo-utils = "0.1.5"
gloo-events = "0.1.2"
gloo = "0.8.0"
log = "0.4.17"
quad-rand = "0.2.1"
comrak = "0.14"
strip_markdown = "0.2.0"
itertools = "0.10.4"

## yew-router = { git = "https://github.com/yewstack/yew", branch="master" }
## yew = { git = "https://github.com/yewstack/yew.git", features = ["csr"] }
## yewdux = { git = "https://github.com/intendednull/yewdux.git" }